get specific user data and add pagenation and resolve cors error in in swagger
