# controllers/uploadFile.go
@@ -9,22 +9,31 @@ import (
 	"github.com/gofiber/fiber/v3"
 )
 
+// Filehandler godoc
+// @Summary      Upload a file
+// @Description  Upload a file to analyze, return json
+// @Tags         User
+// @Accept       multipart/form-data
+// @Produce      json
+// @host 		 localhost:3000
+// @BasePath 	 /
+// @scheme		 http
+// @Success      200
+// @Failure      401
+// @Router       /uploadfile [post]
 func Filehandler(ctx fiber.Ctx) error {
 
 	tokenstring := ctx.Get("Authorization")
 
-
 	if tokenstring == "" {
-		return ctx.JSON(`statuscode : 401, missing token`)
+		return ctx.Status(401).JSON(`statuscode : 401, missing token`)
 	}
 
 	userID, err := middleware.Verifytoken(tokenstring)
 	if err != nil {
 		return err
 	}
-
-	
-
+// 
 	file, err := ctx.FormFile("file")
 	if err != nil {
 		return err
@@ -46,7 +55,7 @@ func Filehandler(ctx fiber.Ctx) error {
 
 	data := analyze(fileContent)
 
-	err = db.InsertResult(data,userID)
+	err = db.InsertResult(data, userID)
 	if err != nil {
 		return err
 	}
