# docs/swagger.yaml
@@ -67,4 +67,32 @@ paths:
       summary: Register User
       tags:
       - Auth
+  /getUserData:
+    get:
+      description: Get data which is store by by user, return data as json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+      summary: Get User Data
+      tags:
+      - User
+  /uploadfile:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Upload a file to analyze, return json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+        "401":
+          description: Unauthorized
+      summary: Upload a file
+      tags:
+      - User
 swagger: "2.0"
